third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/mul/unknown_field_attribute.rs
#[derive(derive_more::Mul)]
struct Foo(#[mul(unknown)] i32);

#[derive(derive_more::Mul)]
enum Enum {
    Bar { #[mul(unknown)] i: i32 },
}

fn main() {}
